--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "dist": true,
     "test/jest-e2e.json": true,
     "output": true,
+    "test/tsconfig.json": true,
   },
   "editor.insertSpaces": true,
   "editor.tabSize": 2,
