--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "noFallthroughCasesInSwitch": false,
     "moduleResolution": "node",
     "lib": [
-        "ESNext"
+      "ESNext"
     ],
     "allowJs": true,
     "esModuleInterop": true,
@@ -34,5 +34,12 @@
   "include": [
     "src",
     "test"
-  ]
+  ],
+  "watchOptions": {
+    "excludeDirectories": [
+      "dist",
+      "output",
+      "node_modules"
+    ]
+  }
 }
